force-app/main/default/objects/DTH_2020_Voucher_Application__c/DTH_2020_Voucher_Application__c.object-meta.xml
<CustomObject>
    <description>DTH 2020 Voucher Applications. Via Formsite form.</description>
    <label>DTH 2020 Voucher Application</label>
    <nameField>
        <label>DTH 2020 Voucher Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DTH 2020 Voucher Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>