force-app/main/default/objects/DTH_2020_Voucher_Application__c/fields/Accepted_Terms__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted Terms</label>
    <type>Checkbox</type>
</CustomField>