force-app/main/default/objects/DTH_2020_Voucher_Application__c/fields/Amount_of_vouchers_requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_vouchers_requested__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount of vouchers requested</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>