force-app/main/default/objects/DTH_2020_Voucher_Application__c/fields/Applicant_comments__c.field-meta.xml
<CustomField>
    <fullName>Applicant_comments__c</fullName>
    <label>Applicant comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>