force-app/main/default/objects/DTH_2020_Voucher_Application__c/fields/ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Code__c</fullName>
    <label>ZIP Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>