force-app/main/default/objects/DTH_2020_Voucher_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount_of_vouchers_requested__c</columns>
    <columns>Applicant_comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>